--- a/PrimalEditor/GameProject/OpenProjectView.xaml
+++ b/PrimalEditor/GameProject/OpenProjectView.xaml
@@ -11,40 +11,41 @@
         <local:OpenProject/>
     </UserControl.DataContext>
 
-    <StackPanel Background="White">
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <ListBox Width="195" Height="250" ItemsSource="{Binding Projects}" x:Name="projectsListBox"
+    <Border CornerRadius="3" Background="{StaticResource Editor.Window.GrayBrush3}" Width="700"
+            HorizontalAlignment="Center" Margin="0,30">
+        <StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
+                <ListBox Width="195" Height="250" ItemsSource="{Binding Projects}" x:Name="projectsListBox"
                      SelectedIndex="0">
 
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <EventSetter Event="MouseDoubleClick" Handler="OpenListBoxItem_Mouse_DoubleClick" />
-                    </Style>
-                </ListBox.ItemContainerStyle>
-                
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="{Binding Icon}" Margin="0,0,5,0" />
-                            <TextBlock Text="{Binding ProjectName}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <EventSetter Event="MouseDoubleClick" Handler="OpenListBoxItem_Mouse_DoubleClick" />
+                        </Style>
+                    </ListBox.ItemContainerStyle>
 
-            <Border Width="400" Height="250" Margin="5,0,0,0">
-                <Border.Background>
-                    <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=projectsListBox}" />
-                </Border.Background>
-            </Border>
-        </StackPanel>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="{Binding Icon}" Margin="0,0,5,0" />
+                                <TextBlock Text="{Binding ProjectName}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                <Border Width="400" Height="250" Margin="5,0,0,0">
+                    <Border.Background>
+                        <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=projectsListBox}" />
+                    </Border.Background>
+                </Border>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,30,0,0">
-            <Button Content="Open" Width="96" IsDefault="True" Click="OnOpen_Button_Click"/>
-            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+                <Button Content="Open" Width="96" IsDefault="True" Click="OnOpen_Button_Click"/>
+                <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+            </StackPanel>
         </StackPanel>
-
-    </StackPanel>
+    </Border>
 </UserControl>
