--- a/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -7,7 +7,6 @@
              xmlns:utl="clr-namespace:PrimalEditor.Utilities"
              mc:Ignorable="d" Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
-
     <UserControl.InputBindings>
         <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl" />
         <KeyBinding Command="{Binding RedoCommand}" Key="Y" Modifiers="Ctrl" />
@@ -38,10 +37,10 @@
                 </Grid.RowDefinitions>
 
                 <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"
-                          VerticalAlignment="Top" />
+                          VerticalAlignment="Top" Background="Transparent"  />
 
-                <TabControl Grid.Row="1">
-                    <TabItem Header="History"> 
+                <TabControl Grid.Row="1" Background="{StaticResource Editor.Window.GrayBrush2}" Margin="0,5,0,0">
+                    <TabItem Header="History">
                         <utl:UndoRedoView DataContext="{Binding UndoRedo}"  />
                     </TabItem>
 
@@ -53,7 +52,7 @@
             </Grid>
 
             <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Left"
-                      VerticalAlignment="Stretch" />
+                      VerticalAlignment="Stretch" Background="Transparent" />
 
             <Grid Grid.Column="1" Margin="5,0,0,0">
                 <Grid.RowDefinitions>
@@ -62,10 +61,10 @@
                 </Grid.RowDefinitions>
 
                 <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"
-                          VerticalAlignment="Top" />
+                          VerticalAlignment="Top" Background="Transparent"  />
 
-                <local:ProjectLayoutView />
-                <local:GameEntityView Grid.Row="1" />
+                <local:ProjectLayoutView Background="{StaticResource Editor.Window.GrayBrush3}" />
+                <local:GameEntityView Grid.Row="1" Background="{StaticResource Editor.Window.GrayBrush3}" Margin="0,5,0,0" />
             </Grid>
         </Grid>
     </Grid>
