--- a/PrimalEditor/GameProject/NewProjectView.xaml
+++ b/PrimalEditor/GameProject/NewProjectView.xaml
@@ -16,19 +16,20 @@
             HorizontalAlignment="Center" Margin="0,30">
         <StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
-                <ListBox Width="195" Height="250" ItemsSource="{Binding ProjectTemplates}" x:Name="templateListBox"
+                <ListBox Width="195" Height="260" ItemsSource="{Binding ProjectTemplates}" x:Name="templateListBox"
                      SelectedIndex="0">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="{Binding Icon}" Margin="0,0,5,0" />
-                                <TextBlock Text="{Binding ProjectType}" />
+                                <TextBlock Text="{Binding ProjectType}" FontSize="18" FontFamily="Bahnschrift Condensed"
+                                           VerticalAlignment="Center"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <Border Width="400" Height="250" Margin="5,0,0,0">
+                <Border Width="400" Height="260" Margin="5,0,0,0">
                     <Border.Background>
                         <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=templateListBox}" />
                     </Border.Background>
