--- a/PrimalEditor/GameProject/OpenProjectView.xaml
+++ b/PrimalEditor/GameProject/OpenProjectView.xaml
@@ -6,7 +6,6 @@
              xmlns:local="clr-namespace:PrimalEditor.GameProject"
              mc:Ignorable="d" Width="800"
              d:DesignHeight="450" d:DesignWidth="800">
-
     <UserControl.DataContext>
         <local:OpenProject/>
     </UserControl.DataContext>
@@ -15,20 +14,26 @@
             HorizontalAlignment="Center" Margin="0,30">
         <StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
-                <ListBox Width="195" Height="250" ItemsSource="{Binding Projects}" x:Name="projectsListBox"
+                <ListBox Width="195" Height="350" ItemsSource="{Binding Projects}" x:Name="projectsListBox"
                      SelectedIndex="0">
 
                     <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
+                        <Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBoxItemStyle}">
                             <EventSetter Event="MouseDoubleClick" Handler="OpenListBoxItem_Mouse_DoubleClick" />
                         </Style>
                     </ListBox.ItemContainerStyle>
 
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Image Source="{Binding Icon}" Margin="0,0,5,0" />
-                                <TextBlock Text="{Binding ProjectName}" />
+                            <StackPanel Width="180">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="{Binding Icon}" Margin="0,0,5,0" />
+                                    <TextBlock Text="{Binding ProjectName}" FontSize="18" FontFamily="Bahnschrift Condensed"
+                                               VerticalAlignment="Center"/>
+                                </StackPanel>
+
+                                <TextBlock Text="{Binding ProjectPath}" FontSize="8" TextTrimming="WordEllipsis" />
+                                <TextBlock Text="{Binding Date}" FontSize="8" />
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
