--- a/PrimalEditor/EnginePathDialog.xaml
+++ b/PrimalEditor/EnginePathDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrimalEditor.EnginePathDialog"
+<Window x:Class="PrimalEditor.EnginePathDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,7 +20,7 @@
 
             <DockPanel>
                 <TextBlock Text="Engine Path" Width="72" Style="{StaticResource LightTextBlockStyle}" />
-                <TextBox x:Name="pathTextBox" />
+				<TextBox x:Name="pathTextBox" HorizontalAlignment="Stretch"/>
             </DockPanel>
 
             <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom"
