--- a/PrimalEditor/Editors/WorldEditor/GameEntityView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/GameEntityView.xaml
@@ -5,12 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrimalEditor.Editors"
              xmlns:vm="clr-namespace:PrimalEditor.Components"
-             mc:Ignorable="d"
+             mc:Ignorable="d" Background="{StaticResource Editor.Window.GrayBrush3}"
+             d:DataContext="{d:DesignInstance Type=vm:MSGameEntity, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <DataTemplate DataType="{x:Type vm:MSTransform}">
             <local:TransformView />
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:MSScript}">
+            <local:ScriptView/>
+        </DataTemplate>
+
+        <ContextMenu x:Key="addComponentMenu"
+                     IsOpen="{Binding Path=IsChecked, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ToggleButton}}}">
+            <MenuItem Header="Geometry" />
+            
+            <MenuItem Header="Physics">
+                <MenuItem Header="Rigid Body" />
+            </MenuItem>
+            
+            <MenuItem Header="Script" ItemsSource="{Binding SelectedEntities[0].ParentScene.Project.AvailableScripts}">
+                <MenuItem.Style>
+                    <Style TargetType="{x:Type MenuItem}">
+                        <Setter Property="Padding" Value="5,3,2,3" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding SelectedEntities[0].ParentScene.Project.AvailableScripts}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="False" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </MenuItem.Style>
+
+                <MenuItem.ItemContainerStyle>
+                    <Style TargetType="{x:Type MenuItem}">
+                        <Setter Property="Padding" Value="5,3,2,3" />
+                        <Setter Property="Header" Value="{Binding}" />
+                        <EventSetter Event="Click" Handler="OnAddScriptComponent" />
+                    </Style>
+                </MenuItem.ItemContainerStyle>
+            </MenuItem>
+        </ContextMenu>
     </UserControl.Resources>
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
@@ -25,11 +60,12 @@
             </Style>
         </ScrollViewer.Style>
 
-        <StackPanel>
+        <StackPanel Background="{StaticResource Editor.Window.GrayBrush4}">
 
-            <Border Height="32">
-                <ToggleButton x:Name="addComponent" VerticalAlignment="Center"
-                          HorizontalAlignment="Left" Margin="5,0,0,0">
+            <Border Height="32" Background="{StaticResource Editor.Window.GrayBrush3}">
+                <ToggleButton x:Name="addComponent" VerticalAlignment="Center" ClickMode="Press" Focusable="False"
+                              HorizontalAlignment="Left" Margin="5,0,0,0"
+                              PreviewMouseLeftButtonDown="OnAddComponent_Button_PreviewMouse_LBD">
                     <ToggleButton.Content>
                         <DockPanel>
                             <TextBlock Text="Add Component" Margin="5,0"/>
@@ -42,7 +78,7 @@
                 </ToggleButton>
             </Border>
 
-            <Grid>
+            <Grid Margin="0,1" Background="{StaticResource Editor.Window.GrayBrush3}" SnapsToDevicePixels="True" Height="32">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="78" />
                     <ColumnDefinition />
