--- a/PrimalEditor/Editors/WorldEditor/GameEntityView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/GameEntityView.xaml
@@ -9,6 +9,8 @@
              d:DataContext="{d:DesignInstance Type=vm:MSGameEntity, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
+        <local:NullableBoolToBoolConverter x:Key="nullableBoolToBoolConverter" />
+        
         <DataTemplate DataType="{x:Type vm:MSTransform}">
             <local:TransformView />
         </DataTemplate>
@@ -60,12 +62,13 @@
             </Style>
         </ScrollViewer.Style>
 
-        <StackPanel Background="{StaticResource Editor.Window.GrayBrush4}">
+        <StackPanel Background="{StaticResource Editor.Window.GrayBrush4}" VerticalAlignment="Top">
 
             <Border Height="32" Background="{StaticResource Editor.Window.GrayBrush3}">
                 <ToggleButton x:Name="addComponent" VerticalAlignment="Center" ClickMode="Press" Focusable="False"
                               HorizontalAlignment="Left" Margin="5,0,0,0"
-                              PreviewMouseLeftButtonDown="OnAddComponent_Button_PreviewMouse_LBD">
+                              PreviewMouseLeftButtonDown="OnAddComponent_Button_PreviewMouse_LBD"
+                              IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}">
                     <ToggleButton.Content>
                         <DockPanel>
                             <TextBlock Text="Add Component" Margin="5,0"/>
@@ -85,20 +88,22 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0"/>
+                <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0" Style="{StaticResource LightTextBlockStyle}"/>
                 <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}"  Grid.Column="1"
                          GotKeyboardFocus="OnName_TextBox_GotKeyboardFocus"
-                         LostKeyboardFocus="OnName_TextBox_LostKeyboardFocus"/>
+                         LostKeyboardFocus="OnName_TextBox_LostKeyboardFocus"
+                         IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}"/>
 
                 <StackPanel Orientation="Horizontal" Grid.Column="2">
-                    <TextBlock Text="Enabled" Margin="5,0,0,0"/>
+                    <TextBlock Text="Enabled" Margin="5,0,0,0" Style="{StaticResource LightTextBlockStyle}"/>
                     <CheckBox IsChecked="{Binding IsEnabled, Mode=OneWay}"
                               Click="OnIsEnabled_CheckBox_Click"
                               Margin="5,0" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
 
-            <ItemsControl ItemsSource="{Binding Components}">
+            <ItemsControl ItemsSource="{Binding Components}" IsTabStop="False" SnapsToDevicePixels="True"
+                          IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel />
