--- a/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -19,7 +19,7 @@
         <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl" />
         <KeyBinding Command="{Binding RedoCommand}" Key="Z" Modifiers="Ctrl+Shift" />
         <KeyBinding Command="{Binding SaveCommand}" Key="S" Modifiers="Ctrl" />
-        <KeyBinding Command="{Binding BuildCommand}" Key="F7" />
+        <KeyBinding Command="{Binding BuildCommand}" CommandParameter="{StaticResource True}" Key="F7" />
     </UserControl.InputBindings>
 
     <Grid>
@@ -46,7 +46,7 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Column="0">
@@ -94,7 +94,7 @@
             <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Left"
                       VerticalAlignment="Stretch" Background="Transparent" />
 
-            <Grid Grid.Column="1" Margin="5,0,0,0">
+            <Grid Grid.Column="1" Margin="5,0,0,0" MinWidth="250">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
