Save the game project in binary format

--- a/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -19,6 +19,9 @@
         <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl" />
         <KeyBinding Command="{Binding RedoCommand}" Key="Z" Modifiers="Ctrl+Shift" />
         <KeyBinding Command="{Binding SaveCommand}" Key="S" Modifiers="Ctrl" />
+        <KeyBinding Command="{Binding DebugStartCommand}" Key="F5"/>
+        <KeyBinding Command="{Binding DebugStartWithoutDebuggingCommand}" Key="F5" Modifiers="Ctrl" />
+        <KeyBinding Command="{Binding DebugStopCommand}" Key="F5" Modifiers="Shift" />
         <KeyBinding Command="{Binding BuildCommand}" CommandParameter="{StaticResource True}" Key="F7" />
     </UserControl.InputBindings>
 
@@ -88,7 +91,7 @@
 
                     <utl:LoggerView Grid.Column="1" Margin="5,0,0,0" />
                 </Grid>
-                
+
             </Grid>
 
             <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Left"
