--- a/PrimalEditor/Content/PrimitiveMeshDialog.xaml
+++ b/PrimalEditor/Content/PrimitiveMeshDialog.xaml
@@ -105,11 +105,20 @@
 
                 <Button Content="Save" Width="96" Margin="5,0"/>
             </StackPanel>
+            
             <!-- CUBE SETTINGS -->
             <!-- UVSPHERE SETTINGS -->
             <!-- ICOSPHERE SETTINGS -->
             <!-- CYLINDER SETTINGS -->
             <!-- CAPSULE SETTINGS -->
+
+            <ed:GeometryView DataContext="{Binding MeshRenderer}" Grid.Column="1"/>
+            <StackPanel Grid.Column="1" Margin="5" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" IsHitTestVisible="False">
+                <TextBlock Text="{Binding MeshRenderer.CameraPosition.X, StringFormat=G5}"/>
+                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Y, StringFormat=G5}" Margin="10,5"/>
+                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Z, StringFormat=G5}"/>
+            </StackPanel>
+
         </Grid>
 
     </DockPanel>
