--- a/PrimalEditor/Content/PrimitiveMeshDialog.xaml
+++ b/PrimalEditor/Content/PrimitiveMeshDialog.xaml
@@ -38,6 +38,10 @@
                           ItemsSource="{Binding Source={StaticResource dataFromEnum}}"
                           x:Name="primalTypeComboBox"
                           SelectionChanged="OnPrimitiveType_ComboBox_SelectionChanged"/>
+
+                <CheckBox x:Name="textureCheckBox" Content="Show Texture" VerticalAlignment="Center"  Margin="5,0"
+                          IsChecked="True" Foreground="{StaticResource Editor.FontBrush}"
+                          Click="OnTexture_CheckBox_Click"/>
             </StackPanel>
         </Border>
 
@@ -115,7 +119,7 @@
             <ed:GeometryView DataContext="{Binding MeshRenderer}" Grid.Column="1"/>
             <StackPanel Grid.Column="1" Margin="5" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" IsHitTestVisible="False">
                 <TextBlock Text="{Binding MeshRenderer.CameraPosition.X, StringFormat=G5}"/>
-                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Y, StringFormat=G5}" Margin="10,5"/>
+                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Y, StringFormat=G5}" Margin="10,0"/>
                 <TextBlock Text="{Binding MeshRenderer.CameraPosition.Z, StringFormat=G5}"/>
             </StackPanel>
 
