--- a/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -7,6 +7,8 @@
              xmlns:utl="clr-namespace:PrimalEditor.Utilities"
              xmlns:ctlr="clr-namespace:PrimalEditor.Utilities.Controls"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:gameproject="clr-namespace:PrimalEditor.GameProject"
+             d:DataContext="{d:DesignInstance Type=gameproject:Project}"
              mc:Ignorable="d" Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
 
