--- a/PrimalEditor/Content/PrimitiveMeshDialog.xaml
+++ b/PrimalEditor/Content/PrimitiveMeshDialog.xaml
@@ -118,7 +118,7 @@
 
                 <Button Content="Save" Width="96" Margin="5,0"/>
             </StackPanel>
-            
+
             <!-- CUBE SETTINGS -->
             <!-- UVSPHERE SETTINGS -->
             <StackPanel Background="{StaticResource Editor.Window.GrayBrush3}">
@@ -141,14 +141,14 @@
                             <DockPanel Margin="5">
                                 <TextBlock Text="Lon." Width="40" DockPanel.Dock="Left" VerticalAlignment="Center"/>
                                 <TextBox Text="{Binding Path=Value, ElementName=xSliderUvSphere}" Width="30" DockPanel.Dock="Right"/>
-                                <Slider Minimum="3" Maximum="64" HorizontalAlignment="Stretch" Interval="1" IsSnapToTickEnabled="True"
+                                <Slider Minimum="3" Maximum="64" Value="24" HorizontalAlignment="Stretch" Interval="1" IsSnapToTickEnabled="True"
                                         TickPlacement="BottomRight" x:Name="xSliderUvSphere" ValueChanged="OnSlider_ValueChanged" />
                             </DockPanel>
 
                             <DockPanel Margin="5">
                                 <TextBlock Text="Lat." Width="40" DockPanel.Dock="Left" VerticalAlignment="Center"/>
                                 <TextBox Text="{Binding Path=Value, ElementName=ySliderUvSphere}" Width="30" DockPanel.Dock="Right"/>
-                                <Slider Minimum="2" Maximum="64" HorizontalAlignment="Stretch" Interval="1" IsSnapToTickEnabled="True"
+                                <Slider Minimum="2" Maximum="64" Value="12" HorizontalAlignment="Stretch" Interval="1" IsSnapToTickEnabled="True"
                                         TickPlacement="BottomRight" x:Name="ySliderUvSphere" ValueChanged="OnSlider_ValueChanged" />
                             </DockPanel>
                         </StackPanel>
@@ -185,6 +185,22 @@
                            Foreground="{StaticResource Editor.FontBrush}"/>
                 </Grid>
 
+                <Grid Margin="0,5">
+                    <Border CornerRadius="3" BorderThickness="1" BorderBrush="{StaticResource Editor.Window.GrayBrush6}"
+                            Background="{StaticResource Editor.Window.GrayBrush4}" Margin="5">
+                            <DockPanel Margin="5">
+                                <TextBlock Text="Angle" Width="40" DockPanel.Dock="Left" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding Path=Value, ElementName=angleSliderUvSphere}" Width="30" DockPanel.Dock="Right"/>
+                                <Slider Minimum="0" Maximum="180" HorizontalAlignment="Stretch" Interval="1" IsSnapToTickEnabled="True"
+                                        x:Name="angleSliderUvSphere" ValueChanged="OnSlider_ValueChanged" />
+                            </DockPanel>
+                    </Border>
+
+                    <Label Content="Smoothing" VerticalAlignment="Top"
+                           HorizontalAlignment="Left" Padding="5,0"
+                           Foreground="{StaticResource Editor.FontBrush}"/>
+                </Grid>
+
                 <Button Content="Save" Width="96" Margin="5,0"/>
             </StackPanel>
 
@@ -193,12 +209,19 @@
             <!-- CAPSULE SETTINGS -->
 
             <ed:GeometryView DataContext="{Binding MeshRenderer}" Grid.Column="1"/>
-            <StackPanel Grid.Column="1" Margin="5" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" IsHitTestVisible="False">
-                <TextBlock Text="{Binding MeshRenderer.CameraPosition.X, StringFormat=G5}"/>
-                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Y, StringFormat=G5}" Margin="10,0"/>
-                <TextBlock Text="{Binding MeshRenderer.CameraPosition.Z, StringFormat=G5}"/>
-            </StackPanel>
 
+            <StackPanel Grid.Column="1" Margin="5" VerticalAlignment="Top" HorizontalAlignment="Left" IsHitTestVisible="False">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding MeshRenderer.CameraPosition.X, StringFormat=G5}" Foreground="{StaticResource Editor.RedBrush}"/>
+                    <TextBlock Text="{Binding MeshRenderer.CameraPosition.Y, StringFormat=G5}" Margin="10,0" Foreground="{StaticResource Editor.GreenBrush}"/>
+                    <TextBlock Text="{Binding MeshRenderer.CameraPosition.Z, StringFormat=G5}" Foreground="{StaticResource Editor.BlueBrush}"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding MeshRenderer.Meshes[0].Positions.Count}" Foreground="{StaticResource Editor.OrangeBrush}"/>
+                    <TextBlock Text="{Binding MeshRenderer.Meshes[0].Indices.Count}" Margin="10,0" Foreground="{StaticResource Editor.OrangeBrush}"/>
+                </StackPanel>
+            </StackPanel>
         </Grid>
 
     </DockPanel>
