--- a/PrimalEditor/Dictionaries/EditorColors.xaml
+++ b/PrimalEditor/Dictionaries/EditorColors.xaml
@@ -17,6 +17,7 @@
     <Color x:Key="Editor.OrangeColor">#FFFFD067</Color>
 
     <Color x:Key="Editor.Selected.BackgroundColor">#FF3C67B6</Color>
+	<Color x:Key="Editor.MouseOver.BorderColor">#ff7eb4ea</Color>
 
     <SolidColorBrush Color="{StaticResource Editor.Window.GrayColor1}" x:Key="Editor.Window.GrayBrush1" />
     <SolidColorBrush Color="{StaticResource Editor.Window.GrayColor2}" x:Key="Editor.Window.GrayBrush2" />
@@ -34,5 +35,6 @@
     <SolidColorBrush Color="{StaticResource Editor.OrangeColor}" x:Key="Editor.OrangeBrush" />
 
     <SolidColorBrush Color="{StaticResource Editor.Selected.BackgroundColor}" x:Key="Editor.Selected.BackgroundBrush" />
+	<SolidColorBrush Color="{StaticResource Editor.MouseOver.BorderColor}" x:Key="Editor.MouseOver.BorderBrush" />
 
 </ResourceDictionary>
