Dropping files onto co`ntent browser for import

--- a/PrimalEditor/Content/ContentBrowser/SaveDialog.xaml
+++ b/PrimalEditor/Content/ContentBrowser/SaveDialog.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="auto"/>
 		</Grid.RowDefinitions>
 
-		<local:ContentBrowserView x:Name="contentBrowserView" SelectionMode="Single" FileAccess="Write"
+		<local:ContentBrowserView x:Name="contentBrowserView" SelectionMode="Single" FileAccess="Write" AllowDrop="False"
 								  MouseDoubleClick="OnContentBrowser_Mouse_DoubleClick"/>
 
 		<Border Grid.Row="1" Background="{StaticResource Editor.Window.GrayBrush3}">
